--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- 任务列表 -->
     <ul>
       <!-- <li v-for="item in todoListData">{{item}}</li> -->
-      <todo-item v-bind:content="item" v-for="item in todoListData"></todo-item>
+      <todo-item v-bind:content="item" v-bind:index="index" v-on:delete="itemClickDelete" v-for="(item, index) in todoListData"></todo-item>
     </ul>
   </div>
 
@@ -27,11 +27,17 @@
     //   props: ['content'],
     //   template: "<li>{{content}}</li>"
     // })
-      
+
     /* 局部组件 */
     var TodoItem = {
-      props: ['content'],
-      template: "<li>{{content}}</li>"
+      props: ['content', 'index'],
+      template: "<li @click='itemClick'>{{content}}</li>",
+      methods: {
+        itemClick: function () {
+          // 向父组件通信
+          this.$emit('delete',this.index)
+        }
+      }
     }
     var app = new Vue({
       el: '#app',
@@ -51,6 +57,10 @@
           }
           this.todoListData.push(this.inputValue)
           this.inputValue = ''
+        },
+        /* 删除一条任务 */
+        itemClickDelete: function (index) {
+          this.todoListData.splice(index, 1)
         }
       }
     })
